plugins {
	id 'org.springframework.boot'
	id 'io.spring.dependency-management'
	id 'java'
}

group = 'com.mockio'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.yaml:snakeyaml:2.3'
	implementation platform("org.springframework.ai:spring-ai-bom:1.0.1")
	implementation "org.springframework.ai:spring-ai-starter-model-openai"
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	//swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	implementation project(':common-spring')
	implementation project(':common-ai-contractor')
	implementation project(':common-kafka')

	implementation "io.github.resilience4j:resilience4j-spring-boot3"

	//jwt
//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

	testImplementation platform("org.testcontainers:testcontainers-bom:1.20.3")



	//actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation "io.micrometer:micrometer-registry-prometheus" //프로메테우스

	implementation "io.hypersistence:hypersistence-utils-hibernate-63:3.7.2"

}

tasks.named('test') {
	useJUnitPlatform()
	systemProperty "spring.profiles.active", "test"  //test는 profile test로
}
